--- a/chatrooms/templates/profile/receiver_profile.html
+++ b/chatrooms/templates/profile/receiver_profile.html
@@ -80,10 +80,10 @@
     <div class="pro-info">
         <div class="info-left">
             {% if receiver.avatar == "" %}
-                    <img src="{% static 'images/profile.png' %}" class="info-avatar">        
-                {%else%}
-                    <img src="{{receiver.avatar}}" class="info-avatar">        
-                {% endif %}
+                <img src="{% static 'images/profile.png' %}" class="info-avatar">        
+            {% else %}
+                <img src="{{receiver.avatar}}" class="info-avatar rounded-circle">        
+            {% endif %}
             
             <div>
                 <a class="btn contact-button" href="{% build_chat_url user.username receiver.username %}">Contact</a>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="content-items">
                     <div class="info-label">
-                        Phone
+                        Phone Number
                     </div>
                     <div class="info-info">
                         {% if receiver.phone == "" %}
