--- a/static/css/change_password.css
+++ b/static/css/change_password.css
@@ -26,8 +26,10 @@ input:focus, textarea:focus, select:focus{
 }
 
 .info-avatar {
-    width: 350px;
-    height: auto;
+    width: 300px;
+    height: 300px;
+
+    margin: 20px 0px;
 }
 
 .info-right {
@@ -90,7 +92,7 @@ input:focus, textarea:focus, select:focus{
     font-weight: 700;
     color: white;
 
-    margin-bottom: 20px;
+    margin: 25px 0px 20px 0px;
     padding: 12px 32px;
     cursor: pointer;
 }
