--- a/chatrooms/templates/chatrooms/index.html
+++ b/chatrooms/templates/chatrooms/index.html
@@ -30,7 +30,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/chat">
-                <img src="{% static 'images/home_button.jpg' %}" class="rounded-circle home_button">
+                {% if user.avatar == "" %}
+                    <img src="{% static 'images/profile.png' %}" class="rounded-circle home_button">        
+                {% else %}
+                    <img src="{{user.avatar}}" class="rounded-circle home_button">        
+                {% endif %}
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
