--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -22,8 +22,10 @@
 }
 
 .info-avatar {
-    width: 350px;
-    height: auto;
+    width: 300px;
+    height: 300px;
+
+    margin: 20px 0px;
 }
 
 .info-right {
