--- a/static/css/change_password.css
+++ b/static/css/change_password.css
@@ -41,6 +41,10 @@ input:focus, textarea:focus, select:focus{
     margin-left: 10px;
 }
 
+.pass-regex {
+    font-weight: 600;
+}
+
 .content-left {
     flex: 30%;
 
