--- a/chatrooms/templates/chatrooms/room.html
+++ b/chatrooms/templates/chatrooms/room.html
@@ -6,6 +6,7 @@
 {% block head %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+<link href="{% static 'css/navbar_and_chatlist.css' %}" rel="stylesheet">
 <link href="{% static 'css/room.css' %}" rel="stylesheet">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -13,13 +14,81 @@
 
 {% block content %}
 <div class="chat-zone text-left">
-    <div class="chat-left">
+    <div class="chat-nav">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-brand" href="">
+                    {% if receiver.avatar == "" %}
+                        <img src="{% static 'images/profile.png' %}" class="rounded-circle home_button">        
+                    {% else %}
+                        <img src="{{receiver.avatar}}" class="rounded-circle home_button">        
+                    {% endif %}
+                </div>
         
-    </div>
-    <div class="chat-right">
-        <div class="test">
-            <h3>To: {{receiver.first_name}} {{receiver.last_name}} <a class="btn btn-danger float-right" href="{% url 'index' %}" role="button">Exit</a> </h3>
+                <div class="receiver-fullname"> {{receiver.first_name}} {{receiver.last_name}} </div>
+                
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <button class="nav-item btn" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                            <i class='nav-link bx bxl-messenger icon'></i>
+                        </button>
+                        <button class="nav-item btn" type="button">
+                            <a role="button" href="/chat/{{receiver.username}}/receiverprofile">
+                                <i class='nav-link bx bxs-user-account icon'></i>
+                            </a>
+                        </button>
+                    </ul>
+                    <ul class="navbar-nav me-0 mb-2 mb-lg-0">
+                        <button class="nav-item btn" type="button">
+                            <a role="button" href="/chat">
+                                <i class='nav-link bx bx-log-out icon'></i>
+                            </a>
+                        </button>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header">
+                <h1 id="offcanvasRightLabel"> <strong>Your Friends</strong></h1>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+        
+            <div class="offcanvas-body">
+                <form class="d-flex" action="">
+                    <input id='search' class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                        name="search">
+                    <button class="btn btn-outline-success" type="button">
+                        <i class='bx bx-search-alt'></i>
+                    </button>
+                </form>
+        
+                <div class="chat-list" id='friend'>
+                    {% for user_dict in users %}
+                    <div class="friend">
+                        <a class="btn left-side" href="{% build_chat_url user.username user_dict.username %}">
+                            {{user_dict.first_name}} {{user_dict.last_name}}
+                        <a class="btn right-side" href="/chat/{{user_dict.username}}/receiverprofile">
+                            <i class='bx bxs-user-account icon receiver'></i>
+                        </a>
+                    </div>
+        
+                    {% empty %}
+                    <p class="text-muted">Ups! no users to chat with.</p>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
+    </div>
+
+    <div class="chat-right">
         <div class="chat-box" >
             <div id="chat-messages" class="card card-body card-chat text-left"> </div>
         </div>
