--- a/chatrooms/templates/profile/receiver_profile.html
+++ b/chatrooms/templates/profile/receiver_profile.html
@@ -10,6 +10,17 @@
 <link href="{% static 'css/receiver_profile.css' %}" rel="stylesheet">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#search").on("keyup", function () {
+            var value = $(this).val().toLowerCase();
+            $("#friend div").filter(function () {
+                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+        });
+    });
+</script>
 {% endblock %}
 
 {% block content %}
@@ -17,52 +28,60 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/chat">
-                <img src="{% static 'images/home_button.jpg' %}" class="rounded-circle home_button">
+                {% if user.avatar == "" %}
+                    <img src="{% static 'images/profile.png' %}" class="rounded-circle home_button">        
+                {% else %}
+                    <img src="{{user.avatar}}" class="rounded-circle home_button">        
+                {% endif %}
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <button class="nav-item btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                    <button class="nav-item btn" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                         <i class='nav-link bx bxl-messenger icon'></i>
                     </button>
                     <button class="nav-item btn" type="button">
                         <a role="button" href="/chat/{{user.username}}/profile">
-                            <i class='nav-link bx bx-user-circle icon' ></i>
+                            <i class='nav-link bx bx-user-circle icon'></i>
                         </a>
                     </button>
                 </ul>
                 <ul class="navbar-nav me-0 mb-2 mb-lg-0">
                     <button class="nav-item btn" type="button">
                         <a role="button" href="{% url 'logout' %}">
-                            <i class='nav-link bx bx-log-out icon' ></i>
+                            <i class='nav-link bx bx-log-out icon'></i>
                         </a>
                     </button>
                 </ul>
             </div>
         </div>
     </nav>
-    
+
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
         <div class="offcanvas-header">
             <h1 id="offcanvasRightLabel"> <strong>Your Friends</strong></h1>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        
+
         <div class="offcanvas-body">
-            <form class="d-flex" action="{% url 'index' %}">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
-                <button class="btn btn-outline-success" type="submit">
-                    <i class='bx bx-search-alt' ></i>
+            <form class="d-flex" action="">
+                <input id='search' class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                    name="search">
+                <button class="btn btn-outline-success" type="button">
+                    <i class='bx bx-search-alt'></i>
                 </button>
             </form>
-            
-            <div class="chat-list">
+
+            <div class="chat-list" id='friend'>
                 {% for user_dict in users %}
                 <div class="friend">
-                    <a class="btn left-side" href="{% build_chat_url user.username user_dict.username %}"><strong>{{user_dict.first_name}} {{user_dict.last_name}}</strong></a>
- 
+                    <a class="btn left-side" href="{% build_chat_url user.username user_dict.username %}">
+                        {{user_dict.first_name}} {{user_dict.last_name}}
                     <a class="btn right-side" href="/chat/{{user_dict.username}}/receiverprofile">
                         <i class='bx bxs-user-account icon receiver'></i>
                     </a>
