--- a/user/templates/user/change_password.html
+++ b/user/templates/user/change_password.html
@@ -28,10 +28,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/chat">
-                {% if receiver.avatar == "" %}
+                {% if user.avatar == "" %}
                     <img src="{% static 'images/profile.png' %}" class="rounded-circle home_button">        
                 {% else %}
-                    <img src="{{receiver.avatar}}" class="rounded-circle home_button">        
+                    <img src="{{user.avatar}}" class="rounded-circle home_button">        
                 {% endif %}
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -41,10 +41,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <button class="nav-item btn" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-                        <i class='nav-link bx bxl-messenger icon'></i>
-                    </button>
                     <button class="nav-item btn" type="button">
                         <a role="button" href="/chat/{{user.username}}/profile">
                             <i class='nav-link bx bx-user-circle icon'></i>
@@ -62,55 +58,23 @@
         </div>
     </nav>
 
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-        <div class="offcanvas-header">
-            <h1 id="offcanvasRightLabel"> <strong>Your Friends</strong></h1>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-
-        <div class="offcanvas-body">
-            <form class="d-flex" action="">
-                <input id='search' class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
-                    name="search">
-                <button class="btn btn-outline-success" type="button">
-                    <i class='bx bx-search-alt'></i>
-                </button>
-            </form>
-
-            <div class="chat-list" id='friend'>
-                {% for user_dict in users %}
-                <div class="friend">
-                    <a class="btn left-side" href="{% build_chat_url user.username user_dict.username %}">
-                        {{user_dict.first_name}} {{user_dict.last_name}}
-                    <a class="btn right-side" href="/chat/{{user_dict.username}}/receiverprofile">
-                        <i class='bx bxs-user-account icon receiver'></i>
-                    </a>
-                </div>
-
-                {% empty %}
-                <p class="text-muted">Ups! no users to chat with.</p>
-                {% endfor %}
-            </div>
-        </div>
-    </div>
-
     <br>
 
     <div class="pro-info">
         <div class="info-left">
-            {% if receiver.avatar == "" %}
+            {% if user.avatar == "" %}
                 <img src="{% static 'images/profile.png' %}" class="info-avatar">        
             {% else %}
-                <img src="{{receiver.avatar}}" class="info-avatar rounded-circle">        
+                <img src="{{user.avatar}}" class="info-avatar rounded-circle">        
             {% endif %}
         </div>
 
         <div class="info-right">
             <div class="content-left">
-                <li> Your password can't be too similar to your other personal information. </li>
-                <li> Your password must contain at least 8 characters. </li>
-                <li> Your password can't be a commonly used password. </li>
-                <li> Your password can't be entirely numeric. </li>
+                <li class="pass-regex"> Your password can't be too similar to your other personal information. </li>
+                <li class="pass-regex"> Your password must contain at least 8 characters. </li>
+                <li class="pass-regex"> Your password can't be a commonly used password. </li>
+                <li class="pass-regex"> Your password can't be entirely numeric. </li>
             </div>
 
             <div class="content-right">
