Update room: auto scroll to bottom when send message

--- a/chatrooms/templates/chatrooms/room.html
+++ b/chatrooms/templates/chatrooms/room.html
@@ -10,6 +10,7 @@
 <link href="{% static 'css/room.css' %}" rel="stylesheet">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -113,6 +114,15 @@
         scrollTop: $('#chat-messages')[0].scrollHeight
         }, "fast"
     );
+
+    $(document).ready(function() {
+        $("#send-message").click(function() {
+            $('#chat-messages').stop().animate({
+                scrollTop: $('#chat-messages')[0].scrollHeight
+                }, "fast"
+            );
+        });
+    });
 
     $(function () {
         // function updateScroll(){
