--- a/static/css/room.css
+++ b/static/css/room.css
@@ -65,6 +65,76 @@ nav {
     margin: 0px 0px 0px 40px;
 }
 
+blockquote {
+    border-radius: .35em;
+    position: relative;
+    display: inline-block;
+    margin: 0;
+    padding: .5em;
+}
+
+.mess-box-user {
+    margin-bottom: 50px;
+}
+
+.mess-name-user {
+    width: fit-content;
+}
+
+.mess-content-user {
+    width: fit-content;
+
+    word-break: break-word;
+    max-width: 564px;
+    word-wrap: break-word;
+}
+
+.mess-box-receiver {
+    margin-bottom: 50px;
+}
+
+.mess-name-receiver {
+    width: fit-content;
+}
+
+.mess-content-receiver {
+    width: fit-content;
+
+    word-break: break-word;
+    max-width: 564px;
+    word-wrap: break-word;
+}
+
+.mess-content-receiver blockquote::before, .mess-content-user blockquote::after {
+    position: absolute;
+    display: block;
+    content: '';
+    width: 0;
+    height: 0;
+}
+
+.mess-box-receiver blockquote {
+    background-color: #0099cc; margin-left: 1em;
+}
+
+.mess-content-receiver blockquote::before {
+    border: .5em solid #0099cc;
+    border-color: #0099cc #0099cc transparent transparent;
+    top: .5em;
+    left: -1em;
+}
+
+.mess-box-user blockquote {
+    background-color: #FFBB73;
+}
+
+.mess-content-user blockquote::after {
+    border: .5em solid #FFBB73;
+    border-color: #FFBB73 transparent transparent #FFBB73;
+    top: .5em;
+    right: -1em;
+}
+
 .mess-line {
     flex: 100%;
 
@@ -99,6 +169,8 @@ nav {
 #send-message:hover {
     color: #30db00;
 }
+
+
 
 @media(max-width: 1300px) {
     nav {
