--- a/user/templates/user/change_password.html
+++ b/user/templates/user/change_password.html
@@ -88,6 +88,12 @@
                         <div class="info-info">
                             {{field}}
                         </div>
+
+                        {% if field.errors %}
+                        <div class="alert alert-danger">
+                            {{field.errors}}
+                        </div>
+                        {% endif %}
                     </div>
                     {% endfor %}
                     <input class="update-pass" type="submit" value="Confirm">
