--- a/static/css/change_password.css
+++ b/static/css/change_password.css
@@ -9,6 +9,17 @@ input:focus, textarea:focus, select:focus{
     outline: none;
 }
 
+.alert-danger {
+    font-size: 15px;
+    padding: 0;
+
+    max-height: fit-content;
+}
+
+.alert-danger li {
+    padding: 1rem 1rem 0 0;
+}
+
 .pro-info {
     display: flex;
     flex-wrap: wrap;
