--- a/user/templates/user/change_password.html
+++ b/user/templates/user/change_password.html
@@ -11,16 +11,12 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $("#search").on("keyup", function () {
-            var value = $(this).val().toLowerCase();
-            $("#friend div").filter(function () {
-                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-            });
-        });
-    });
-</script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block content %}
@@ -60,94 +56,58 @@
 
     <br>
 
+    <form id="f" method="POST" action="{% url 'change_password' %}">
     <div class="pro-info">
-        <div class="info-left">
-            {% if user.avatar == "" %}
-                <img src="{% static 'images/profile.png' %}" class="info-avatar">        
-            {% else %}
-                <img src="{{user.avatar}}" class="info-avatar rounded-circle">        
-            {% endif %}
-        </div>
-
-        <div class="info-right">
-            <div class="content-left">
-                <li class="pass-regex"> Your password can't be too similar to your other personal information. </li>
-                <li class="pass-regex"> Your password must contain at least 8 characters. </li>
-                <li class="pass-regex"> Your password can't be a commonly used password. </li>
-                <li class="pass-regex"> Your password can't be entirely numeric. </li>
+            <div class="info-left">
+                {% if user.avatar == "" %}
+                    <img src="{% static 'images/profile.png' %}" class="info-avatar">        
+                {% else %}
+                    <img src="{{user.avatar}}" class="info-avatar rounded-circle">        
+                {% endif %}
+                <button class="update-pass" type="submit" onclick="myFunction()">Confirm</button>
             </div>
 
-            <div class="content-right">
-                <form method="POST" action="{% url 'change_password' %}">
-                    {% csrf_token %}
-                    {% for field in form %}
-                    <div class="content-items">
-                        <div class="info-label">
-                            {{field.label}}
-                        </div>
-                        <div class="info-info">
-                            {{field}}
-                        </div>
+            <div class="info-right">
+                <div class="content-left">
+                    <li class="pass-regex"> Your password can't be too similar to your other personal information. </li>
+                    <li class="pass-regex"> Your password must contain at least 8 characters. </li>
+                    <li class="pass-regex"> Your password can't be a commonly used password. </li>
+                    <li class="pass-regex"> Your password can't be entirely numeric. </li>
+                </div>
 
-                        {% if field.errors %}
-                        <div class="alert alert-danger">
-                            {{field.errors}}
+                <div class="content-right">
+                        {% csrf_token %}
+                        {% for field in form %}
+                        <div class="content-items">
+                            <div class="info-label">
+                                {{field.label}}
+                            </div>
+                            <div class="info-info">
+                                {{field}}
+                            </div>
+
+                            {% if field.errors %}
+                            <div class="alert alert-danger">
+                                {{field.errors}}
+                            </div>
+                            {% endif %}
                         </div>
-                        {% endif %}
-                    </div>
-                    {% endfor %}
-                    <input class="update-pass" type="submit" value="Confirm">
-                </form>
+                        {% endfor %}
+                </div>
             </div>
         </div>
-    </div>
+    </form>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-    crossorigin="anonymous"></script>
+<script>
+    var form = document.getElementById('f');
+
+    function myFunction() {
+        if (form.checkValidity()) {
+            alert("Your password is changed!");
+        }
+    }
+</script>
+
 {% endblock %}
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <title>Đăng Nhập</title>
-</head>
-
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 offset-md-2">
-                {% if message %}
-                    <h4 style="color:red"> {{message}}</h4>
-                {% endif %}
-                <form method="POST">
-                    {% csrf_token %}
-                        <table>
-                            {{form.as_table}}
-                        </table>
-                    <input type="submit" class="btn btn-success btn-lg btn-block" value="Confirm">
-                </form> 
-            </div>
-        </div>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
-</body>
-
 </html> -->
