--- a/user/templates/user/edit_profile.html
+++ b/user/templates/user/edit_profile.html
@@ -11,16 +11,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $("#search").on("keyup", function () {
-            var value = $(this).val().toLowerCase();
-            $("#friend div").filter(function () {
-                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-            });
-        });
-    });
-</script>
+
 {% endblock %}
 
 {% block content %}
@@ -60,7 +51,7 @@
 
     <br>
 
-    <form method="POST">
+    <form id="f" method="POST">
         <div class="pro-info">
             <div class="info-left">
                 {% if user.avatar == "" %}
@@ -70,7 +61,7 @@
                 {% endif %}
 
                 <div>
-                    <input class="update-info" type="submit" name="submit" value="update">
+                    <button class="update-info" type="submit" onclick="myFunction()" name="submit"> update </button>
                 </div>
             </div>
 
@@ -150,6 +141,16 @@
         </div>
     </form>
 </div>
+
+<script>
+    var form = document.getElementById('f');
+
+    function myFunction() {
+        if (form.checkValidity()) {
+            alert("Update Successfully!");
+        }
+    }
+</script>
 {% endblock %}
 
 <!-- <!DOCTYPE html>
