Remove change_pass alert

--- a/user/templates/user/change_password.html
+++ b/user/templates/user/change_password.html
@@ -64,7 +64,7 @@
                 {% else %}
                     <img src="{{user.avatar}}" class="info-avatar rounded-circle">        
                 {% endif %}
-                <button class="update-pass" type="submit" onclick="myFunction()">Confirm</button>
+                <button class="update-pass" type="submit">Confirm</button>
             </div>
 
             <div class="info-right">
@@ -98,16 +98,6 @@
         </div>
     </form>
 </div>
-
-<script>
-    var form = document.getElementById('f');
-
-    function myFunction() {
-        if (form.checkValidity()) {
-            alert("Your password is changed!");
-        }
-    }
-</script>
 
 {% endblock %}
 </html> -->
