--- a/user/templates/user/edit_profile.html
+++ b/user/templates/user/edit_profile.html
@@ -61,7 +61,7 @@
                 {% endif %}
 
                 <div>
-                    <button class="update-info" type="submit" onclick="myFunction()" name="submit"> update </button>
+                    <button class="update-info" type="submit" onclick="myFunction()" name="submit"> Update </button>
                 </div>
             </div>
 
